--- a/rel.config.json
+++ b/rel.config.json
@@ -1,5 +1,7 @@
 {
   "port": 4311,
   "default_project_root": "./demo_project",
-  "default_index_path": "index.html"
+  "default_index_path": "index.html",
+  "externalStyles": [],
+  "externalScripts": []
 }
