feat(editor): add element deletion, resizable panels, and runtime design libraries support
- Added element deletion via button and keyboard (Delete / Backspace)
- Persist deleted nodes in patch.json with fallback selector support
- Synced tree view and selection state after deletion
- Implemented resizable left and right panels with drag handles
- Saved panel widths in localStorage with reset layout option
- Added runtime design library injection (Bootstrap, Bulma, Pico, Tailwind CDN)
- Added optional icon sets and animation libraries (Material Icons, Font Awesome, Animate.css)
- Extended patch schema to v2 including deletedNodes and runtimeLibraries
- Ensured backward compatibility with older patch versions
- Performed internal code review and cleaned unused listeners/imports

--- a/rel.config.json
+++ b/rel.config.json
@@ -3,5 +3,11 @@
   "default_project_root": "./demo_project",
   "default_index_path": "index.html",
   "externalStyles": [],
-  "externalScripts": []
+  "externalScripts": [],
+  "defaultsLibraries": {
+    "designLibrary": "none",
+    "iconSet": "none",
+    "animateCss": false,
+    "bootstrapJs": false
+  }
 }
