--- a/REL_EDITOR/server/package.json
+++ b/REL_EDITOR/server/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "express": "^4.21.2",
+    "linkedom": "^0.18.12",
     "mime-types": "^2.1.35",
     "multer": "^2.0.2"
   }
