Replace vite status polling with WebSocket updates; init rel_editor artifacts on load

--- a/REL_EDITOR/server/package.json
+++ b/REL_EDITOR/server/package.json
@@ -11,6 +11,7 @@
     "express": "^4.21.2",
     "linkedom": "^0.18.12",
     "mime-types": "^2.1.35",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "ws": "^8.19.0"
   }
 }
